--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.31",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.16",
+        "laravel-mix": "^6.0.49",
+        "tailwindcss": "^3.3.3"
     }
 }
